# aiogram-test-framework

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: commit.md
.github/workflows/: publish.yml
aiogram_test_framework/: __init__.py  base.py  client.py  factories.py  mock_bot.py  request_capture.py  setup.py  types.py  user.py
tests/: conftest.py  test_client.py  test_factories.py  test_integration.py  test_mock_bot.py  test_request_capture.py  test_user.py
